added multithreading text searcher - Searcher